2003-05-03  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed 2.2 branch for gnome-themes.

2003-05-03  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed 2.2 fifth-toe, bindings,
	developer-app, office, and extras modules. They were mostly
	identical to those we have in the respective 2.4 sections anyway,
	and we need to reduce the amount of modules to build for the
	status pages.

2003-05-02  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Fix pot name for gnome-spell.

2003-05-01  Ole Laursen  <olau@hardworking.dk>

	* translation-status.xml: Moved gdl and gnome-build to developer-app.

2003-04-30  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Fixed 2.4 branch for libgtop.

2003-04-29  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Tried to add 2.4 modules.

2003-04-25  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch for libgnome,
	libgnomeui, and libgnomecanvas.

2003-04-23  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added alleyoop.

2003-04-15  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed gtranslator at maintainer's
	request (gtranslator is dead).

2003-04-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch for gdm2.

2003-03-31  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch for gnome-icon-theme,
	gnome-vfs, eel, and nautilus.

2003-03-31  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch for yelp.

2003-03-30  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch for gnome-mime-data.

2003-03-29  Christian Neumair  <chris@gnome-de.org>

	* translation-status.xml: Removed gpaint.

2003-03-26  Carlos Perelló Marín <carlos@gnome.org>

	* translation-status.xml: Removed gimp-gap and added red-carpet.

2003-03-26  Carlos Perelló Marín <carlos@gnome.org>
