@@ -2411,26 +2411,6 @@
       </component>
     </version>
   </module>
-  <module name="pong">
-    <version release="gnome-1.4">
-      <component name="pong" dir="pong" group="extras">
-	<podir dir="po"/>
-	<potname name="pong2.pot"/>
-	<branch name="HEAD"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
-    <version release="gnome-2.4">
-      <component name="pong" dir="pong" group="extras">
-	<podir dir="po"/>
-	<potname name="pong2.pot"/>
-	<branch name="HEAD"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
-  </module>
   <module name="popt">
     <version release="gnome-1.4">
       <component name="popt" dir="popt" group="extras">
