@@ -1,3 +1,7 @@
+2003-05-03  Ole Laursen  <olau@hardworking.dk>
+
+	* translation-status.xml: Removed pong since George says it is dead.
+
 2003-05-03  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Fixed 2.2 branch for gnome-themes.
